--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <audio id="bgMusic" loop>
-    <source src="assets/music/ye-tune-kya-kiya.mp3" type="audio/mpeg">
+    <source src="ye-tune-kya-kiya.mp3.mp3" type="audio/mpeg">
   </audio>
 
   <div id="overlay">
