--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     
     <!-- Background music (starts after tap) -->
-    <audio id="bg-music" src="ye-tune-kya-kiya.mp3" loop></audio>
+    <audio id="bg-music" src="ye-tune-kya-kiya.mp3.mp3" loop></audio>
     
     <script src="main.js"></script>
 </body>
